# CALLIOPE

./: .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: tests.yaml
src/calliope/: __init__.py  chemistry.py  constants.py  oxygen_fugacity.py  solubility.py  solve.py  structure.py  surface_gases.py
tests/: test_init.py
tools/: SolveVol.ipynb  SolveVol_ecdf.ipynb
